--- a/web/src/main/resources/templates/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal_cabinet.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Hello, world!</title>
-    <link rel="stylesheet" href="masters.css" />
+    <link rel="stylesheet" href="../static/css/personal_cabinet.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../main.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
   </head>
   <body class="container" style="background-color: rgb(247, 247, 247)">
     <div
       class="d-flex container col-5 justify-content-center d-flex navbar sticky-top fixed-top"
       style="background-color: rgb(255, 255, 255)"
     >
-      <div class="col-1 my-auto">
-        <a href="../organisation/organisation.html">
+      <div class="col-1 my-auto mx-auto">
+        <a href="organisation.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="23"
@@ -36,45 +36,21 @@
         </a>
       </div>
       <div class="d-flex flex-column col-11">
-        <p class="org_name text-center p-2">Выбери Специалиста</p>
+        <p class="text-center p-2">Личный кабинет</p>
       </div>
-    </div>
-
-    <div
-      class="options d-flex justify-content-center container col-5 my-3"
-      style="background-color: rgb(255, 255, 255); border-radius: 15px"
-    >
-      <a href="#">
-        <div class="d-flex">
-          <div class="col-1 my-auto">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="30"
-              fill="currentColor"
-              class="bi bi-person-circle"
-              viewBox="0 0 16 16"
-            >
-              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-              <path
-                fill-rule="evenodd"
-                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
-              />
-            </svg>
-          </div>
-          <div class="">
-            <div class="master_info col-11">
-              <p class="master_desc">
-                Toп-мастер (интересы: тачки, кухня, единоборства, бар, столярка)
-              </p>
-              <p class="master_name" style="margin-top: -15px">Женя</p>
-            </div>
-          </div>
+      <div class="flex-column d-flex justify-content-start">
+        <div class="">
+          <p id="change_lang" style="color: rgb(154, 164, 196)" class="mx-0">
+            Изменить язык
+          </p>
         </div>
-
-        <div class="row my-auto mx-auto">
-            ...
+        <div class="">
+          <select class="form-select">
+            <option>Русский</option>
+            <option>English</option>
+          </select>
         </div>
-      </a>
+      </div>
     </div>
 
     <script
