--- a/web/src/main/resources/templates/organisation.html
+++ b/web/src/main/resources/templates/organisation.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title th:text="${org.name}"></title>
-    <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
+    <title th:text="${org.name}"></title><link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+        crossorigin="anonymous"
+/>
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-            crossorigin="anonymous"
-    />
+    <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body class="container" style="background-color: rgb(247, 247, 247)">
@@ -21,9 +21,9 @@
         style="background-color: rgb(255, 255, 255)"
 >
     <div class="col-10 d-flex flex-column">
-        <p id="org_name" class="text-center p-2" style="margin: 0em" th:text="${org.name}"></p>
-        <p id="org_desc" class="p-2" style="margin: 0em" th:text="${org.description}"></p>
-        <p class="org_address p-2" style="margin: 0em" th:text="${org.address}"></p>
+        <p class="text-center p-2" style="margin: 0em" th:text="${org.name}"></p>
+        <p class="p-2" style="margin: 0em" th:text="${org.description}"></p>
+        <p class="org_address text-center p-2" style="margin: -15px" th:text="${org.address}"></p>
     </div>
     <div>
         <a href="personal_cabinet.html">
