--- a/web/src/main/resources/templates/utilities.html
+++ b/web/src/main/resources/templates/utilities.html
@@ -6,22 +6,20 @@
 
 
     <!--    <title th:text="${org.name}"></title>-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous"/>
     <link th:href="@{/css/utilities.css}" rel="stylesheet"/>
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
 
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-            crossorigin="anonymous"
-    />
 </head>
 <body class="container" style="background-color: rgb(247, 247, 247)">
 <div
         class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
         style="background-color: rgb(255, 255, 255)"
 >
-    <div class="col-2">
+    <div class="col-1">
         <a th:href="@{../{id}(id=${orgId})}">
             <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -37,15 +35,13 @@
             </svg>
         </a>
     </div>
-    <div class="d-flex flex-column col-10">
+    <div class="d-flex flex-column col-11">
         <p class="org_name text-center p-2">Услуги</p>
     </div>
 </div>
 
 <th:block th:each="utility:${utilities}">
-    <div
-            class="utility d-flex container-fluid col-6 my-3"
-    >
+    <div class="utility d-flex container-fluid col-6 my-3">
         <a href="#">
             <div class="d-flex flex-column">
                 <p th:text="${utility.description}"></p>
@@ -53,6 +49,18 @@
         </a>
     </div>
 </th:block>
+
+<!--<th:block th:each="utility:${utilities}">-->
+<!--    <div class="container col-6 px-0">-->
+<!--        <a href="#">-->
+<!--            <div class="utility d-flex my-3">-->
+<!--                <div class="d-flex flex-column">-->
+<!--                    <p th:text="${utility.description}"></p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</th:block>-->
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
