--- a/web/src/main/resources/templates/workers.html
+++ b/web/src/main/resources/templates/workers.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!--    TODO Pass orgName with ModelAndView <title th:text="${orgName}"></title>-->
-    <link th:href="@{/css/workers.css}" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous"/>
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
+    <link th:href="@{/css/workers.css}" rel="stylesheet"/>
 
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-            crossorigin="anonymous"
-    />
 </head>
 <body class="container" style="background-color: rgb(247, 247, 247)">
-<div
-        class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
-        style="background-color: rgb(255, 255, 255)"
+<div class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
+     style="background-color: rgb(255, 255, 255)"
 >
-    <div class="col-1 my-auto">
+    <div class="col-1 my-auto mx-auto">
         <a th:href="@{../{id}(id=${orgId})}">
             <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -31,8 +28,7 @@
             >
                 <path
                         fill-rule="evenodd"
-                        d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"
-                />
+                        d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.5-.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
             </svg>
         </a>
     </div>
@@ -42,42 +38,34 @@
 </div>
 
 <th:block th:each="worker:${workers}">
-    <div
-            class="option d-flex justify-content-center container col-6 my-3"
-            style="background-color: rgb(255, 255, 255); border-radius: 15px"
-    >
-        <div class="container-fluid d-flex">
-            <a th:href="@{/{id}(id=${worker.id})}">
-<!--            <a th:href="@{}">-->
-                <div class="col-1 my-auto">
+    <div class="container col-6 px-0">
+        <a th:href="@{workers/{id}(id=${worker.id})}">
+            <div class="option d-flex my-3">
+                <div class="col-1 my-auto mx-auto center-box">
                     <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="30"
                             fill="currentColor"
                             class="bi bi-person-circle"
-                            viewBox="0 0 16 16"
-                    >
+                            viewBox="0 0 16 16">
                         <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                        <path
-                                fill-rule="evenodd"
-                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
-                        />
+                        <path fill-rule="evenodd"
+                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                     </svg>
                 </div>
                 <div class="worker_info col-11">
                     <p class="master_desc" th:text="${worker.description}"></p>
-                    <p class="master_name" style="margin-top: -15px" th:text="${worker.firstName}"</p>
+                    <p class="master_name" th:text="${worker.firstName}"></p>
                 </div>
-            </a>
-        </div>
-
+            </div>
+        </a>
     </div>
 </th:block>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"
-></script>
+        crossorigin="anonymous">
+</script>
 </body>
 </html>
