--- a/web/src/main/resources/templates/utility-choose-worker.html
+++ b/web/src/main/resources/templates/utility-choose-worker.html
@@ -29,7 +29,8 @@
 
 <th:block th:each="worker:${workers}">
     <div class="container col-6 px-0">
-        <a th:href="@{/worker/{id}/utilities(id=${worker.id})}">
+        <a href="#">
+<!--        <a th:href="@{/worker/{id}/utilities(id=${worker.id})}">-->
             <div class="option d-flex my-3">
                 <div class="col-1 my-auto mx-auto center-box">
                     <svg
