--- a/web/src/main/resources/templates/organisation.html
+++ b/web/src/main/resources/templates/organisation.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title th:text="${org.name}"></title><link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-        crossorigin="anonymous"
-/>
+    <title th:text="${org.name}"></title>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+            crossorigin="anonymous"
+    />
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
     <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
 
@@ -43,10 +44,12 @@
 </div>
 
 <div
-        class="options d-flex container col-6 my-3"
+        id="select-master"
+        class="option d-flex container col-6 my-3"
         style="background-color: rgb(255, 255, 255); border-radius: 15px"
 >
-    <a th:href="@{{id}/workers(id=${org.id})}">
+    <!--    <a th:href="@{{id}/workers(id=${org.id})}">-->
+    <a th:onclick="">
         <div class="d-flex">
             <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -60,14 +63,15 @@
                 />
             </svg>
             <div class="col-10">
-                <p class="p-1 my-3 text-center">Выбрать Мастера</p>
+                <p class="p-1 my-3 text-center">Выбрать Специалиста</p>
             </div>
         </div>
     </a>
 </div>
 
 <div
-        class="options d-flex container col-6 my-3"
+        id="select-service"
+        class="option d-flex container col-6 my-3"
         style="background-color: rgb(255, 255, 255); border-radius: 15px"
 >
 
@@ -91,6 +95,41 @@
         </div>
     </a>
 </div>
+
+<div
+        id="select-time"
+        class="option d-flex container col-6 my-3"
+        style="background-color: rgb(255, 255, 255); border-radius: 15px"
+>
+
+    <a>
+        <!--    <a th:href="@{{id}/utilities(id=${org.id})}">-->
+        <div class="d-flex">
+            <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="30"
+                    fill="currentColor"
+                    class="bi bi-postcard"
+                    viewBox="0 0 16 16"
+            >
+                <path
+                        fill-rule="evenodd"
+                        d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2ZM1 4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4Zm7.5.5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7ZM2 5.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1H2.5a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1H2.5a.5.5 0 0 1-.5-.5Zm0 2a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1H2.5a.5.5 0 0 1-.5-.5ZM10.5 5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3ZM13 8h-2V6h2v2Z"
+                />
+            </svg>
+            <div class="col-10">
+                <p class="p-1 my-3 text-center">Выбрать Дату и Время</p>
+            </div>
+        </div>
+    </a>
+</div>
+
+<script type="text/javascript" th:src="@{/js/organisation.js}"></script>
+<script>
+    const regex = [[${org.id}]];
+    console.log(regex);
+    keepOrganisation(regex);
+</script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
