--- a/web/src/main/resources/templates/workers.html
+++ b/web/src/main/resources/templates/workers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -29,7 +29,8 @@
 
 <th:block th:each="worker:${workers}">
     <div class="container col-6 px-0">
-        <a th:href="@{/worker/{id}/utilities(id=${worker.id})}">
+        <a th:href="@{/organisation/{id}(id=${orgId})}"
+           th:onclick="localStorage.setItem('workerId', [[${worker.id}]]);">
             <div class="option d-flex my-3">
                 <div class="col-1 my-auto mx-auto center-box">
                     <svg
