--- a/web/src/main/resources/templates/utilities.html
+++ b/web/src/main/resources/templates/utilities.html
@@ -13,6 +13,7 @@
     <link th:href="@{/css/utilities.css}" rel="stylesheet"/>
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body class="container" style="background-color: rgb(247, 247, 247)">
 <div
@@ -30,17 +31,22 @@
 </div>
 
 <th:block th:each="utility:${utilities}">
-    <div class="utility d-flex container-fluid col-6 my-3">
-        <a th:href="@{/organisation/{id}(id=${orgId})}"
-           th:onclick="localStorage.setItem('utilityId', [[${utility.id}]]);"
-        >
-            <div class="d-flex flex-column">
-                <p th:text="${utility.description}"></p>
-                <p th:text="${utility.price}"></p>
-            </div>
-        </a>
+    <div class="d-flex container-fluid col-6 my-3"
+         th:classappend="${utility.hasWorkers} ? 'utility' : 'inactive'"
+         th:onclick="localStorage.setItem('utilityId', [[${utility.id}]]);"
+    >
+        <div class="d-flex flex-column">
+            <p th:text="${utility.description}"></p>
+            <p th:text="${utility.price}"></p>
+        </div>
     </div>
 </th:block>
+
+<script type="text/javascript" th:src="@{/js/utilities.js}"></script>
+<script type="text/javascript" th:src="@{/js/main.js}"></script>
+<script>
+    keepOrganisation([[${orgId}]]);
+</script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
