--- a/web/src/main/resources/templates/workers.html
+++ b/web/src/main/resources/templates/workers.html
@@ -12,6 +12,7 @@
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
     <link th:href="@{/css/workers.css}" rel="stylesheet"/>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body class="container" style="background-color: rgb(247, 247, 247)">
 <div class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
@@ -28,30 +29,27 @@
 </div>
 
 <th:block th:each="worker:${workers}">
-    <div class="container col-6 px-0">
-        <a th:href="@{/organisation/{id}(id=${orgId})}"
-           th:onclick="localStorage.setItem('workerId', [[${worker.id}]]);">
-            <div class="option d-flex my-3">
-                <div class="col-1 my-auto mx-auto center-box">
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="30"
-                            fill="currentColor"
-                            class="bi bi-person-circle"
-                            viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                        <path fill-rule="evenodd"
-                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                    </svg>
-                </div>
-                <div class="worker_info col-11">
-                    <p class="master_desc" th:text="${worker.description}"></p>
-                    <p class="master_name" th:text="${worker.firstName}"></p>
-                </div>
+    <div class="container col-6 px-0" th:classappend="${worker.hasUtilities} ? 'worker' : 'inactive'"
+         th:onclick="localStorage.setItem('workerId', [[${worker.id}]]);">
+        <div class="d-flex my-3">
+            <div class="col-1 my-auto mx-auto center-box">
+                <img th:src="@{/img/person-circle.svg}" class="img-fluid"
+                     width="40">
             </div>
-        </a>
+            <div class="worker_info col-11">
+                <p class="master_desc" th:text="${worker.description}"></p>
+                <p class="master_name" th:text="${worker.firstName}"></p>
+            </div>
+        </div>
     </div>
 </th:block>
+
+
+<script type="text/javascript" th:src="@{/js/workers.js}"></script>
+<script type="text/javascript" th:src="@{/js/main.js}"></script>
+<script>
+    keepOrganisation([[${orgId}]]);
+</script>
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
