--- a/web/src/main/resources/templates/workers.html
+++ b/web/src/main/resources/templates/workers.html
@@ -15,35 +15,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body class="container" style="background-color: rgb(247, 247, 247)">
-<div class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
-     style="background-color: rgb(255, 255, 255)"
->
-    <div class="col-1 my-auto mx-auto">
-        <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
-             width="24"
-             onclick="history.back()">
-    </div>
-    <div class="d-flex flex-column col-11">
-        <p class="text-center p-2">Выбери Специалиста</p>
-    </div>
-</div>
 
-<th:block th:each="worker:${workers}">
-    <div class="container col-6 px-0" th:classappend="${worker.hasUtilities} ? 'worker' : 'inactive'"
-         th:onclick="localStorage.setItem('workerId', [[${worker.id}]]);">
-        <div class="d-flex my-3">
-            <div class="col-1 my-auto mx-auto center-box">
-                <img th:src="@{/img/person-circle.svg}" class="img-fluid"
-                     width="40">
-            </div>
-            <div class="worker_info col-11">
-                <p class="master_desc" th:text="${worker.description}"></p>
-                <p class="master_name" th:text="${worker.firstName}"></p>
-            </div>
-        </div>
-    </div>
-</th:block>
-
+<th:block th:insert="~{fragment/redactor/workers :: body}"></th:block>
 
 <script type="text/javascript" th:src="@{/js/workers.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
