file structure changed: fragments for user, redactor, admin created

--- a/web/src/main/resources/static/css/utilities.css
+++ b/web/src/main/resources/static/css/utilities.css
@@ -1,6 +1,10 @@
-.utility {
+.utility, .option {
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
+}
+
+.option:hover {
+    cursor: pointer;
 }
 
 .utility:hover {
