--- a/web/src/main/resources/templates/fragment/redactor/organisation.html
+++ b/web/src/main/resources/templates/fragment/redactor/organisation.html
@@ -30,5 +30,21 @@
             <p class="p-1 my-3 text-center">Изменить Услуги</p>
         </div>
     </div>
+
+    <div class="select-utility option d-flex container col-6 my-3">
+        <div class="d-flex">
+            <img th:src="@{/img/clock.svg}" class="img-fluid"
+                 width="30">
+            <p class="p-1 my-3 text-center">Изменить Расписание</p>
+        </div>
+    </div>
+
+    <div class="select-utility option d-flex container col-6 my-3">
+        <div class="d-flex">
+            <img th:src="@{/img/gear.svg}" class="img-fluid"
+                 width="30">
+            <p class="p-1 my-3 text-center">Изменить Организацию</p>
+        </div>
+    </div>
 </body>
 </html>
