--- a/web/src/main/resources/templates/fragment/redactor/utilities.html
+++ b/web/src/main/resources/templates/fragment/redactor/utilities.html
@@ -14,10 +14,22 @@
     </div>
 </div>
 
+<div id="createWorker" class="select-master option d-flex container-fluid col-6 px-0 my-3">
+    <div class="d-flex my-3 container">
+        <div class="col-1 my-auto mx-auto center-box">
+            <img th:src="@{/img/receipt.svg}" class="d-block mx-auto"
+                 width="40">
+        </div>
+        <div class="worker_info col-10">
+            <p class="text-center p-2" >Добавить новую услугу</p>
+        </div>
+    </div>
+</div>
+
+
 <th:block th:each="utility:${utilities}">
-    <div th:id="${utility.id}" class="d-flex container-fluid col-6 my-3"
-         th:classappend="${utility.hasWorkers} ? 'utility' : 'inactive'"
-         th:onclick="onclickUser([[${utility.id}]]);">
+    <div th:id="${utility.id}" class="utility d-flex container-fluid col-6 my-3"
+         th:onclick="onclickUtility([[${utility.id}]]);">
         <div class="d-flex flex-column">
             <p th:text="${utility.description}"></p>
             <p th:text="${utility.price}"></p>
