--- a/web/src/main/resources/templates/organisation/organisation.html
+++ b/web/src/main/resources/templates/organisation/organisation.html
@@ -16,9 +16,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
-<body class="container" style="background-color: rgb(247, 247, 247)">
-<th:block th:insert="~{fragment/user/organisation :: body}"></th:block>
-<!--<th:block th:insert="~{fragment/redactor/organisation :: body}"></th:block>-->
+<body class="container">
+<!--<th:block th:insert="~{fragment/user/organisation :: body}"></th:block>-->
+<th:block th:insert="~{fragment/redactor/organisation :: body}"></th:block>
 
 
 <script type="text/javascript" th:src="@{/js/organisation.js}"></script>
