--- a/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
+++ b/web/src/main/resources/templates/personal-cabinet/personal_cabinet.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Hello, world!</title>
-    <link rel="stylesheet" href="../static/css/personal_cabinet.css" />
+    <link rel="stylesheet" href="../../static/css/personal_cabinet.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../../static/css/main.css" />
   </head>
   <body class="container" style="background-color: rgb(247, 247, 247)">
     <div
@@ -20,7 +20,7 @@
       style="background-color: rgb(255, 255, 255)"
     >
       <div class="col-1 my-auto mx-auto">
-        <a href="organisation.html">
+        <a href="../organisation/organisation.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="23"
