--- a/web/src/main/resources/templates/worker/workers.html
+++ b/web/src/main/resources/templates/worker/workers.html
@@ -14,8 +14,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
-<body class="container" style="background-color: rgb(247, 247, 247)">
+<body class="container">
 
+<!--<th:block th:insert="~{fragment/user/workers :: body}"></th:block>-->
 <th:block th:insert="~{fragment/redactor/workers :: body}"></th:block>
 
 <script type="text/javascript" th:src="@{/js/workers.js}"></script>
