Update and Delete worker requests added

--- a/web/src/main/resources/templates/worker/updateWorker.html
+++ b/web/src/main/resources/templates/worker/updateWorker.html
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
     />
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
-    <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
+    <link th:href="@{/css/updateWorker.css}" rel="stylesheet"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
@@ -23,11 +23,49 @@
     <div class="col-1 my-auto mx-auto">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
-             onclick="history.back()">
+             th:onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
         <p class="text-center p-2">Изменить специалиста</p>
     </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">Имя</span>
+            </div>
+            <input type="text" id="first-name" class="form-control" placeholder="Имя" aria-label="Username" aria-describedby="basic-addon1" th:value="${worker.firstName}">
+        </div>
+        <p id="incorrect-first-name" class='my-0 incorrect'>Длина имени должна быть больше 2 и меньше 46 символов</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon2">Фамилия</span>
+            </div>
+            <input type="text" id="last-name" class="form-control" placeholder="Фамилия" aria-label="Username" aria-describedby="basic-addon1" th:value="${worker.lastName}">
+        </div>
+        <p id='incorrect-last-name' class='my-0 incorrect'>Длина фамилии должна быть больше 2 и меньше 46 символов</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon3">Описание</span>
+            </div>
+            <input type="text" id="description" class="form-control" placeholder="Описание" aria-label="Username" aria-describedby="basic-addon1" th:value="${worker.description}">
+        </div>
+        <p id='incorrect-description' class='my-0 incorrect'>Длина описания должна быть больше 14 символов</p>
+    </div>
+
+    <button type="button" class="btn btn-primary mx-3 my-2" th:onclick="updateWorker([[${worker.id}]])">Сохранить</button>
+    <button type="button" class="btn btn-primary" th:onclick="deleteWorker([[${worker.id}]])">Удалить </button>
+
+
+    <script type="text/javascript" th:src="@{/js/updateWorker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
+
 </div>
 
 </body>
