--- a/web/src/main/resources/templates/worker/createWorker.html
+++ b/web/src/main/resources/templates/worker/createWorker.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-<!--    <title th:text="${org.name}"></title>-->
+    <!--    <title th:text="${org.name}"></title>-->
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -12,7 +12,7 @@
             crossorigin="anonymous"
     />
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
-    <link th:href="@{/css/organisation.css}" rel="stylesheet"/>
+    <link th:href="@{/css/updateWorker.css}" rel="stylesheet"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
@@ -23,11 +23,49 @@
     <div class="col-1 my-auto mx-auto">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
-             onclick="history.back()">
+             onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
-        <p class="text-center p-2">Создать специалиста</p>
+        <p class="text-center p-2">Добавить специалиста</p>
     </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">Имя</span>
+            </div>
+            <input type="text" id="first-name" class="form-control" placeholder="Имя" aria-label="Name" aria-describedby="basic-addon1" required>
+        </div>
+        <p id="incorrect-first-name" class='my-0 incorrect'>Длина имени должна быть больше 2 и меньше 46 символов</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon2">Фамилия</span>
+            </div>
+            <input type="text" id="last-name" class="form-control" placeholder="Фамилия" aria-label="LastName" aria-describedby="basic-addon1" required>
+        </div>
+        <p id='incorrect-last-name' class='my-0 incorrect'>Длина фамилии должна быть больше 2 и меньше 46 символов</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon3">Описание</span>
+            </div>
+            <input type="text" id="description" class="form-control" placeholder="Описание" aria-label="Description" aria-describedby="basic-addon1" required>
+        </div>
+        <p id='incorrect-description' class='my-0 incorrect'>Длина описания должна быть больше 14 символов</p>
+    </div>
+
+    <button type="button" class="btn btn-primary">Сохранить</button>
+
+
+    <script type="text/javascript" th:src="@{/js/updateWorker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/createWorker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
+
 </div>
 
 </body>
