Update Organisation request added

--- a/web/src/main/resources/templates/fragment/redactor/utilities.html
+++ b/web/src/main/resources/templates/fragment/redactor/utilities.html
@@ -7,7 +7,7 @@
     <div class="col-1 h-100">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
-             onclick="history.back()">
+             onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
         <p class="org_name text-center p-2">Услуги</p>
