--- a/web/src/main/resources/templates/fragment/redactor/organisation.html
+++ b/web/src/main/resources/templates/fragment/redactor/organisation.html
@@ -15,7 +15,7 @@
              width="35">
     </div>
 
-    <div class="select-master option d-flex container col-6 my-3">
+    <div class="select-master-redactor option d-flex container col-6 my-3">
         <div class="d-flex">
             <img th:src="@{/img/people.svg}" class="d-block mx-auto"
                  width="30">
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="select-utility option d-flex container col-6 my-3">
+    <div class="select-utility-redactor option d-flex container col-6 my-3">
         <div class="d-flex">
             <img th:src="@{/img/receipt-cutoff.svg}" class="img-fluid"
                  width="30">
@@ -39,12 +39,13 @@
         </div>
     </div>
 
-    <div class="select-utility option d-flex container col-6 my-3">
+    <div class="select-change-organisation option d-flex container col-6 my-3">
         <div class="d-flex">
             <img th:src="@{/img/gear.svg}" class="img-fluid"
                  width="30">
             <p class="p-1 my-3 text-center">Изменить Организацию</p>
         </div>
     </div>
+</th:block>
 </body>
 </html>
