--- a/web/src/main/resources/templates/fragment/redactor/workers.html
+++ b/web/src/main/resources/templates/fragment/redactor/workers.html
@@ -8,7 +8,7 @@
         <div class="col-1 my-auto mx-auto">
             <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
                  width="24"
-                 onclick="history.back()">
+                 onclick="goBack()">
         </div>
         <div class="d-flex flex-column col-11">
             <p class="text-center p-2">Выбери Специалиста</p>
@@ -28,7 +28,7 @@
     </div>
 
     <th:block th:each="worker:${workers}">
-        <div th:id="${worker.id}" class="select-master option d-flex container-fluid col-6 px-0 my-3"
+        <div th:id="${worker.id}" class="select-master-redactor option d-flex container-fluid col-6 px-0 my-3"
         th:onclick="gotoUpdateWorker([[${worker.id}]])">
             <div class="d-flex my-3 container">
                 <div class="col-1 my-auto mx-auto center-box">
