--- a/web/src/main/resources/templates/fragment/user/utilities.html
+++ b/web/src/main/resources/templates/fragment/user/utilities.html
@@ -7,7 +7,7 @@
     <div class="col-1 h-100">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
-             onclick="history.back()">
+             onclick="goBack()">
     </div>
     <div class="d-flex flex-column col-11">
         <p class="org_name text-center p-2">Услуги</p>
@@ -17,14 +17,13 @@
 <th:block th:each="utility:${utilities}">
     <div th:id="${utility.id}" class="d-flex container-fluid col-6 my-3"
          th:classappend="${utility.hasWorkers} ? 'utility' : 'inactive'"
-         th:onclick="onclickUser([[${utility.id}]]);">
+         th:onclick="onclickUtility([[${utility.id}]]);">
         <div class="d-flex flex-column">
             <p th:text="${utility.description}"></p>
             <p th:text="${utility.price}"></p>
         </div>
     </div>
 </th:block>
-
 
 </body>
 </html>
