--- a/web/src/main/resources/templates/fragment/user/workers.html
+++ b/web/src/main/resources/templates/fragment/user/workers.html
@@ -8,7 +8,7 @@
         <div class="col-1 my-auto mx-auto">
             <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
                  width="24"
-                 onclick="history.back()">
+                 onclick="goBack()">
         </div>
         <div class="d-flex flex-column col-11">
             <p class="text-center p-2">Выбери Специалиста</p>
