Javascript structure refactored

--- a/web/src/main/resources/templates/organisation/organisation.html
+++ b/web/src/main/resources/templates/organisation/organisation.html
@@ -21,7 +21,7 @@
 <th:block th:insert="~{fragment/redactor/organisation :: body}"></th:block>
 
 
-<script type="text/javascript" th:src="@{/js/organisation.js}"></script>
+<script type="text/javascript" th:src="@{/js/organisation/organisation.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 <script>
