--- a/web/src/main/resources/templates/fragment/redactor/utilities.html
+++ b/web/src/main/resources/templates/fragment/redactor/utilities.html
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div id="createWorker" class="select-master option d-flex container-fluid col-6 px-0 my-3">
+<div id="createUtility" class="select-master option d-flex container-fluid col-6 px-0 my-3">
     <div class="d-flex my-3 container">
         <div class="col-1 my-auto mx-auto center-box">
             <img th:src="@{/img/receipt.svg}" class="d-block mx-auto"
@@ -29,7 +29,7 @@
 
 <th:block th:each="utility:${utilities}">
     <div th:id="${utility.id}" class="utility d-flex container-fluid col-6 my-3"
-         th:onclick="onclickUtility([[${utility.id}]]);">
+         th:onclick="updateUtility([[${utility.id}]]);">
         <div class="d-flex flex-column">
             <p th:text="${utility.description}"></p>
             <p th:text="${utility.price}"></p>
