--- a/web/src/main/resources/templates/organisation/updateOrganisation.html
+++ b/web/src/main/resources/templates/organisation/updateOrganisation.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <!--    <title th:text="${org.name}"></title>-->
+        <title th:text="${org.name + ': обновить организацию'}"></title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -18,8 +18,7 @@
 </head>
 <body class="container">
 <div class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
-     style="background-color: rgb(255, 255, 255)"
->
+     style="background-color: rgb(255, 255, 255)">
     <div class="col-1 my-auto mx-auto">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
@@ -62,7 +61,7 @@
     <button type="button" id="update" class="btn btn-primary mx-3 my-2">Сохранить</button>
     <button type="button" id="delete" class="btn btn-primary">Удалить </button>
 
-    <script type="text/javascript" th:src="@{/js/updateOrganisation.js}"></script>
+    <script type="text/javascript" th:src="@{/js/organisation/updateOrganisation.js}"></script>
 
 </div>
 
