--- a/web/src/main/resources/templates/utility/updateUtility.html
+++ b/web/src/main/resources/templates/utility/updateUtility.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+        <title th:text="${orgName + ': обновить услугу'}"></title>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+            crossorigin="anonymous"
+    />
+    <link th:href="@{/css/main.css}" rel="stylesheet"/>
+    <link th:href="@{/css/updateWorker.css}" rel="stylesheet"/>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
-<body>
+<body class="container">
+<div class="d-flex container col-6 justify-content-center d-flex navbar sticky-top fixed-top"
+     style="background-color: rgb(255, 255, 255)"
+>
+    <div class="col-1 my-auto mx-auto">
+        <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
+             width="24"
+             onclick="goBack()">
+    </div>
+    <div class="d-flex flex-column col-11">
+        <p class="text-center p-2">Изменить услугу</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">Название</span>
+            </div>
+            <input type="text" id="name" class="form-control" placeholder="Название" aria-label="Name" aria-describedby="basic-addon1" th:value="${utility.name}" required>
+        </div>
+        <p id="incorrect-name" class='my-0 incorrect'>Длина названия должна быть больше 2 и меньше 40 символов</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon2">Цена</span>
+            </div>
+            <input type="number"  min="0" step="0.1" id="price" class="form-control" placeholder="0" aria-label="LastName" aria-describedby="basic-addon2" th:value="${utility.price}" required>
+        </div>
+        <p id='incorrect-price' class='my-0 incorrect'>Цена должна быть положительна</p>
+    </div>
+
+    <div class="option d-flex container-fluid px-0 my-3">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon3">Описание</span>
+            </div>
+            <input type="text" id="description" class="form-control" placeholder="Описание" aria-label="Description" aria-describedby="basic-addon3" th:value="${utility.description}" required>
+        </div>
+        <p id='incorrect-description' class='my-0 incorrect'>Длина описания должна быть больше 14 символов</p>
+    </div>
+
+    <button type="button" id="update" class="btn btn-primary mx-3 my-2">Сохранить</button>
+    <button type="button" id="delete" class="btn btn-primary">Удалить </button>
+
+    <script type="text/javascript" th:src="@{/js/utility/updateUtility.js}"></script>
+
+</div>
 
 </body>
 </html>
