--- a/web/src/main/resources/templates/utility/utilities.html
+++ b/web/src/main/resources/templates/utility/utilities.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
 
-    <!--    <title th:text="${orgName}"></title>-->
+        <title th:text="${orgName + ': услуги'}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
@@ -20,7 +20,7 @@
 <!--<th:block th:insert="~{fragment/user/utilities :: body}"></th:block>-->
 <th:block th:insert="~{fragment/redactor/utilities :: body}"></th:block>
 
-<script type="text/javascript" th:src="@{/js/utilities.js}"></script>
+<script type="text/javascript" th:src="@{/js/utility/utilities.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
 <script>
     keepOrganisation([[${orgId}]]);
