--- a/web/src/main/resources/templates/worker/createWorker.html
+++ b/web/src/main/resources/templates/worker/createWorker.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <!--    <title th:text="${org.name}"></title>-->
+        <title th:text="${orgName + ': создать работника'}"></title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -62,8 +62,8 @@
     <button type="button" class="btn btn-primary">Сохранить</button>
 
 
-    <script type="text/javascript" th:src="@{/js/updateWorker.js}"></script>
-    <script type="text/javascript" th:src="@{/js/createWorker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/worker/updateWorker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/worker/createWorker.js}"></script>
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
