--- a/web/src/main/resources/templates/worker/updateWorker.html
+++ b/web/src/main/resources/templates/worker/updateWorker.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <!--    <title th:text="${org.name}"></title>-->
+        <title th:text="${orgName + ': обновить работника'}"></title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -59,11 +59,12 @@
         <p id='incorrect-description' class='my-0 incorrect'>Длина описания должна быть больше 14 символов</p>
     </div>
 
-    <button type="button" class="btn btn-primary mx-3 my-2" th:onclick="updateWorker([[${worker.id}]])">Сохранить</button>
-    <button type="button" class="btn btn-primary" th:onclick="deleteWorker([[${worker.id}]])">Удалить </button>
+    <button type="button" class="btn btn-primary mx-1 my-2 w-25" th:onclick="updateWorker([[${worker.id}]])">Сохранить</button>
+    <button type="button" class="btn btn-primary mx-1 w-30" th:onclick="manageUtilities([[${worker.id}]])">Назначить услуги</button>
+    <button type="button" class="btn btn-primary mx-1 w-25" th:onclick="deleteWorker([[${worker.id}]])">Удалить </button>
 
 
-    <script type="text/javascript" th:src="@{/js/updateWorker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/worker/updateWorker.js}"></script>
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
 </div>
