--- a/web/src/main/resources/templates/worker/workers.html
+++ b/web/src/main/resources/templates/worker/workers.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <!--    TODO Pass orgName with ModelAndView <title th:text="${orgName}"></title>-->
+    <title th:text="${orgName + ': специалисты'}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
@@ -19,7 +19,7 @@
 <!--<th:block th:insert="~{fragment/user/workers :: body}"></th:block>-->
 <th:block th:insert="~{fragment/redactor/workers :: body}"></th:block>
 
-<script type="text/javascript" th:src="@{/js/workers.js}"></script>
+<script type="text/javascript" th:src="@{/js/worker/workers.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
 <script>
     keepOrganisation([[${orgId}]]);
