--- a/web/src/main/resources/templates/fragment/user/utilities.html
+++ b/web/src/main/resources/templates/fragment/user/utilities.html
@@ -19,8 +19,9 @@
          th:classappend="${utility.hasWorkers} ? 'utility' : 'inactive'"
          th:onclick="onclickUtility([[${utility.id}]]);">
         <div class="d-flex flex-column">
+            <p th:text="${utility.name}"></p>
             <p th:text="${utility.description}"></p>
-            <p th:text="${utility.price}"></p>
+            <p th:text="${utility.price + ' $'}"></p>
         </div>
     </div>
 </th:block>
