--- a/web/src/main/resources/templates/utility/createUtility.html
+++ b/web/src/main/resources/templates/utility/createUtility.html
@@ -45,6 +45,9 @@
                 <span class="input-group-text" id="basic-addon2">Цена</span>
             </div>
             <input type="number"  min="0" step="0.1" id="price" class="form-control" placeholder="0" aria-label="LastName" aria-describedby="basic-addon2" required>
+            <div class="input-group-append">
+                <span class="input-group-text" id="basic-addon">$</span>
+            </div>
         </div>
         <p id='incorrect-price' class='my-0 incorrect'>Цена должна быть положительна</p>
     </div>
