--- a/web/src/main/resources/static/css/organisation.css
+++ b/web/src/main/resources/static/css/organisation.css
@@ -30,3 +30,13 @@
 .master_name {
     margin-top: -15px;
 }
+
+#suspended {
+    border-radius: 5px;
+    background-color: red;
+    color: white;
+}
+
+#suspended:hover {
+    cursor: pointer;
+}
