Create Records view created

--- a/web/src/main/resources/templates/fragment/redactor/organisation.html
+++ b/web/src/main/resources/templates/fragment/redactor/organisation.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:float="http://www.w3.org/1999/xhtml">
 <body>
-<script defer src="/examples/libs/bootstrap-4/bootstrap.bundle.min.js"></script>
 <th:block th:fragment="body">
     <div
             class="d-flex container col-6 justify-content-center navbar sticky-top fixed-top"
@@ -55,11 +54,11 @@
         </div>
     </div>
 
-    <div class="select-utility option d-flex container col-6 my-3">
+    <div class="select-time-redactor option d-flex container col-6 my-3">
         <div class="d-flex">
             <img th:src="@{/img/clock.svg}" class="img-fluid"
                  width="30">
-            <p class="p-1 my-3 text-center">Изменить Расписание</p>
+            <p class="p-1 my-3 text-center">Редактирование расписания</p>
         </div>
     </div>
 
