Create Records validation and requests added

--- a/web/src/main/resources/templates/select-time/assignSchedule.html
+++ b/web/src/main/resources/templates/select-time/assignSchedule.html
@@ -25,7 +25,7 @@
 <body class="container">
 
 <div class="d-flex container col-10 justify-content-center d-flex navbar sticky-top fixed-top"
-     style="background-color: rgb(255, 255, 255)">
+     style="background-color: rgb(255, 255, 255); z-index: 9">
     <div class="col-1 my-auto mx-auto">
         <img th:src="@{/img/arrow-left-circle.svg}" class="img-fluid go-back-button"
              width="24"
