Admin Organisation fragment added to web

--- a/web/src/main/resources/templates/worker/workers.html
+++ b/web/src/main/resources/templates/worker/workers.html
@@ -18,6 +18,7 @@
 
 <!--<th:block th:insert="~{fragment/user/workers :: body}"></th:block>-->
 <th:block th:insert="~{fragment/redactor/workers :: body}"></th:block>
+<!--<th:block th:insert="~{fragment/admin/workers :: body}"></th:block>-->
 
 <script type="text/javascript" th:src="@{/js/worker/workers.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
