--- a/web/src/main/resources/templates/organisation/organisation.html
+++ b/web/src/main/resources/templates/organisation/organisation.html
@@ -18,6 +18,7 @@
 <body class="container">
 <!--<th:block th:insert="~{fragment/user/organisation :: body}"></th:block>-->
 <th:block th:insert="~{fragment/redactor/organisation :: body}"></th:block>
+<!--<th:block th:insert="~{fragment/admin/organisation :: body}"></th:block>-->
 
 <script type="text/javascript" th:src="@{/js/organisation/organisation.js}"></script>
 <script type="text/javascript" th:src="@{/js/main.js}"></script>
