--- a/web/src/main/resources/templates/fragment/redactor/utilities.html
+++ b/web/src/main/resources/templates/fragment/redactor/utilities.html
@@ -31,9 +31,9 @@
     <div th:id="${utility.id}" class="utility d-flex container-fluid col-6 my-3"
          th:onclick="updateUtility([[${utility.id}]]);">
         <div class="d-flex flex-column">
-            <p th:text="${utility.name}"></p>
-            <p th:text="${utility.description}"></p>
-            <p th:text="${utility.price + ' $'}"></p>
+            <p class="mt-2 mb-1" th:text="${utility.name}"></p>
+            <p class="mt-1 mb-1 utility-description" th:text="${utility.description}"></p>
+            <p class="utility-price" th:text="${utility.price + ' $'}"></p>
         </div>
     </div>
 </th:block>
