Worker description style changed

--- a/web/src/main/resources/templates/fragment/admin/workers.html
+++ b/web/src/main/resources/templates/fragment/admin/workers.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="worker_info col-10">
                     <p class="master_name" th:text="${worker.firstName + ' ' + worker.lastName}"></p>
-                    <p th:text="${worker.description}"></p>
+                    <p class="master_desc" th:text="${worker.description}"></p>
                 </div>
             </div>
         </div>
