--- a/web/src/main/resources/templates/fragment/redactor/workers.html
+++ b/web/src/main/resources/templates/fragment/redactor/workers.html
@@ -36,7 +36,8 @@
                          width="40">
                 </div>
                 <div class="worker_info col-10">
-                    <p class="master_name" th:text="${worker.firstName + ' ' + worker.lastName}">Static content</p>
+                    <p class="master_name" th:text="${worker.firstName + ' ' + worker.lastName}"></p>
+                    <p class="master_desc" th:text="${worker.description}"></p>
                 </div>
             </div>
         </div>
